--- a/manifests/grafana/deployment.yaml
+++ b/manifests/grafana/deployment.yaml
@@ -46,7 +46,8 @@ spec:
           # timeoutSeconds: 1
         volumeMounts:
         - name: grafana-persistent-storage
-          mountPath: /var
+          mountPath: /var/lib/grafana
       volumes:
       - name: grafana-persistent-storage
-        emptyDir: {}
+        persistentVolumeClaim:
+          claimName: grafana-data
