--- a/manifests/prometheus/node-directory-size-metrics/daemonset.yaml
+++ b/manifests/prometheus/node-directory-size-metrics/daemonset.yaml
@@ -49,6 +49,9 @@ spec:
         - name: host-fs-var
           mountPath: /mnt/var
           readOnly: true
+        - name: host-fs-run
+          mountPath: /run
+          readOnly: true
         - name: metrics
           mountPath: /tmp
       - name: caddy
@@ -66,6 +69,9 @@ spec:
       - name: host-fs-var
         hostPath:
           path: /var
+      - name: host-fs-run
+        hostPath:
+          path: /run
       - name: metrics
         emptyDir:
           medium: Memory
